--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Jon",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
